# league-champion-stats-analysis

./: .env.example  .gitignore  AGENTS.md  README.md  brand_assets.py  cache.py  champions.py  config.py  config.toml.example  ddragon_assets.py  export.py  graphs.py  main.py  models.py  parser.py  pyproject.toml  report.py  requirements.txt  riot_api.py  to_add.md  utils.py
.github/workflows/: pytest.yml
analysis/: __init__.py  benchmark_fetcher.py  benchmarks.py  coach.py  deaths.py  economy.py  laning.py  matchups.py  objectives.py  peer_baseline.py  peer_cache.py  peer_comparison.py  peer_ingest.py  peer_metrics.py  positioning.py  rank_scope.py  runes.py  statistics.py  teamfights.py  timeline.py  vision.py
data/benchmarks/: _bottom.json  _jungle.json  _middle.json  _top.json  _utility.json
src/league_stats/: __init__.py  utils.py
src/league_stats/analysis/: combat.py  deaths.py  economy.py  improvement.py  items.py  jungle.py  key_moments.py  laning.py  matchups.py  objectives.py  positioning.py  runes.py  statistics.py  support.py  teamfights.py  timeline.py  vision.py
src/league_stats/cli/: app.py
src/league_stats/core/: __init__.py  champions.py  config.py  models.py  role_metrics.py
src/league_stats/infra/: __init__.py  cache.py  ddragon_assets.py  riot_api.py
src/league_stats/ingest/: __init__.py  parser.py
src/league_stats/pipeline/: bundles.py  fetch.py  frames.py  game_review.py  orchestrator.py  progression.py  services.py  summaries.py  view_models.py
src/league_stats/presentation/: __init__.py  brand_assets.py  export.py  graphs.py  metric_colors.py  report.py  ui_icons.py
templates/: index.html  player_hub.html  report.html
tests/: __init__.py  conftest.py  fixtures.py  test_benchmark_fetcher.py  test_brand_assets.py  test_build_pools.py  test_cache.py  test_champions.py  test_coach.py  test_combat.py  test_config.py  test_ddragon_assets.py  test_deaths.py  test_economy.py  test_game_review.py  test_game_windows.py  test_graphs.py  test_improvement_score.py  test_index_refresh.py  test_key_moments.py  test_metric_colors.py  test_multi_player.py  test_objectives.py  test_parser.py  test_peer_baseline.py  test_peer_blend.py  test_peer_comparison.py  test_peer_store.py  test_pipeline.py  test_positioning.py  test_progression.py  test_queue_filters.py  test_reports.py  test_role_metrics.py  test_role_timeline_metrics.py  test_statistics.py  test_support_utility.py  test_teamfights.py  test_ui_icons.py  test_utils.py  (+1 more)
(+40 files in other folders)
