[project]
name = "league-champion-stats-analysis"
version = "1.1.0"
description = "Deep coaching analysis of ranked solo queue games for any champion + lane via the Riot Match-V5 API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "League Champion Stats Analysis" }]
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.24",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "jinja2>=3.1",
    "typer>=0.12",
    "pydantic>=2.9",
    "tqdm>=4.66",
    "joblib>=1.4",
    "diskcache>=5.6",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[project.scripts]
league-champion-stats = "main:app"
viktor-analyzer = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "config.py",
    "champions.py",
    "riot_api.py",
    "cache.py",
    "parser.py",
    "models.py",
    "utils.py",
    "graphs.py",
    "report.py",
    "export.py",
    "analysis",
    "templates",
    "data",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
